<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fr.ensicaen.ecole.fluxrss.MainActivity">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_height="match_parent"
        android:layout_width="match_parent">
    <LinearLayout
        android:layout_width ="match_parent"
        android:layout_height= "wrap_content"
        android:id ="@+id/linearLayout"
        android:tag = "MyLinearLayout"
        android:orientation="vertical">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:weightSum="1">
            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/image_precedente"
                android:id="@+id/buttonPrev"
                android:layout_weight="0.5" />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/image_suivante"
                android:id="@+id/buttonNext"
                android:layout_weight="0.5" />
        </LinearLayout>
        <TextView
            android:id = "@+id/imageTitle"
            android:layout_width= "wrap_content"
            android:layout_height= "wrap_content"
            android:layout_marginBottom = "10dp"
            android:tag = "MyImageTitle"
            android:text="@string/test_image_title" />
        <TextView
            android:id="@+id/imageDate"
            android:layout_width ="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:tag="MyImageDate"
            android:text= "@string/test_image_date" />
        <ImageView
            android:id= "@+id/imageDisplay"
            android:layout_width = "wrap_content"
            android:layout_height = "wrap_content"
            android:contentDescription= "@string/description_image"
            android:adjustViewBounds = "true"
            android:tag = "MyImageDisplay"
            android:src =" @mipmap/ic_launcher "/>
        <TextView
            android:id="@+id/imageDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:tag="MyImageDescription"
            android:text= "@string/test_image_description"/>
    </LinearLayout >
</ScrollView>
</androidx.appcompat.widget.LinearLayoutCompat>